@@ -1,5 +1,6 @@
 - also export mpinv
 - fix RedoDimsCode for native-complex
+- fix matrix-multiplication overload to work with native-complex
 
 0.19 2021-05-24
 - change to PDL 2.047 with native complex i()
